# se-proj

./: .gitignore  CMakeLists.txt  README.md  compile_flags.txt  main.cpp
include/glad/: glad.h
src/: glad.c  main.cpp  se-proj
src/shapes/: IShape.h  TriangleShape.h
